# yakovlev_m_y

./: CMakeLists.txt  README.md
cmake/: build_prefix.cmake
complex/: fast pow.cpp
prj.lab/: CMakeLists.txt
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.test/test_complex/: CMakeLists.txt  test_complex.cpp
prj.test/test_rational/: CMakeLists.txt  test_rational.cpp
